prevent browser default navigation with horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,9 @@ body,
   height: 100%;
   overflow: hidden;
 }
+
+html,
+body {
+  overscroll-behavior-x: none;
+  /* prevent backwards/forwards navigation to another webpage */
+}
